fix: swagger handlers
